# monobase

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.build  README.md  apt-dependencies.txt  build.sh  cloudbuild.yaml  env.sh  matrix.json  mini.Dockerfile  mini.sh  pyproject.toml  requirements-dev.txt  requirements-user.txt  ruff.toml  run.sh  runtime.Dockerfile  test.sh  update.sh
.github/workflows/: ci.yml
kubernetes/oneoff/: pod.yaml
script/: build  build-cuda  build-image  build-mini  build-mini-image  build-prod  build-runtime  build-runtime-image  build.sh  check  check.sh  clean  debug  debug-build  debug.sh  latest_coglet.py  mini.sh  run-oneoff-pod  test  test-apt  test-mini  test-mini.sh  test-pget  test-user  test.sh  update  update.sh  upload_matrix.py
src/: build.py  build.sh  cog.py  config.py  cuda.py  diff.py  entrypoint.sh  env.sh  matrix.py  monogen.py  optimize.py  pget  prune.py  torch.py  update.py  urls.py  user.py  util.py  uv.py
src/monobase/: __main__.py  activate.sh  apt.sh  build.py  build.sh  cog.py  cuda.py  diff.py  entrypoint.sh  env.sh  exec.sh  monogen.py  optimize.py  pget  pget.py  prune.py  refresh_files.py  run.sh  tar.sh  torch.py  update.py  urls.py  user.py  util.py  uv.py
src/monobase/requirements/: latest
src/requirements/g00000/: python3.10-torch2.1.2-cu121.txt  python3.10-torch2.2.0-cu121.txt  python3.10-torch2.3.0-cu118.txt  python3.10-torch2.4.0-cu118.txt  python3.10-torch2.4.0-cu121.txt  python3.11-torch2.1.2-cu121.txt  python3.11-torch2.2.1-cu118.txt  python3.11-torch2.2.2-cu121.txt  (+11 more)
(+1866 files in other folders)
