[project]
name = "monobase"
description = "Replicate monolithic base dependency build friend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "structlog",
]
license = {file = "LICENSE"}
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/monobase/_version.py"
